Fixed HUD power ups visualization
Signed-off-by: vbaldi7 <v.baldi7@studenti.unisa.it>